--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
 		"domain": "facebook.com",
 		"path": "/login/device-based/",
 		"hostOnly": false,
-		"creation": "2025-11-21T10:22:53.428Z",
-		"lastAccessed": "2025-11-21T10:22:53.435Z"
+		"creation": "2025-11-21T16:00:52.228Z",
+		"lastAccessed": "2025-11-21T16:00:52.236Z"
 	},
 	{
 		"key": "datr",
@@ -14,8 +14,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-11-21T10:22:53.435Z",
-		"lastAccessed": "2025-11-21T10:22:53.435Z"
+		"creation": "2025-11-21T16:00:52.236Z",
+		"lastAccessed": "2025-11-21T16:00:52.236Z"
 	},
 	{
 		"key": "sb",
@@ -23,8 +23,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-11-21T10:22:53.435Z",
-		"lastAccessed": "2025-11-21T10:22:53.435Z"
+		"creation": "2025-11-21T16:00:52.236Z",
+		"lastAccessed": "2025-11-21T16:00:52.236Z"
 	},
 	{
 		"key": "ps_l",
@@ -32,8 +32,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-11-21T10:22:53.435Z",
-		"lastAccessed": "2025-11-21T10:22:53.435Z"
+		"creation": "2025-11-21T16:00:52.236Z",
+		"lastAccessed": "2025-11-21T16:00:52.236Z"
 	},
 	{
 		"key": "ps_n",
@@ -41,8 +41,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-11-21T10:22:53.435Z",
-		"lastAccessed": "2025-11-21T10:22:53.435Z"
+		"creation": "2025-11-21T16:00:52.236Z",
+		"lastAccessed": "2025-11-21T16:00:52.236Z"
 	},
 	{
 		"key": "c_user",
@@ -50,8 +50,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-11-21T10:22:53.435Z",
-		"lastAccessed": "2025-11-21T10:22:53.435Z"
+		"creation": "2025-11-21T16:00:52.236Z",
+		"lastAccessed": "2025-11-21T16:00:52.236Z"
 	},
 	{
 		"key": "xs",
@@ -59,8 +59,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-11-21T10:22:53.435Z",
-		"lastAccessed": "2025-11-21T10:22:53.435Z"
+		"creation": "2025-11-21T16:00:52.236Z",
+		"lastAccessed": "2025-11-21T16:00:52.236Z"
 	},
 	{
 		"key": "locale",
@@ -68,8 +68,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-11-21T10:22:53.435Z",
-		"lastAccessed": "2025-11-21T10:22:53.435Z"
+		"creation": "2025-11-21T16:00:52.236Z",
+		"lastAccessed": "2025-11-21T16:00:52.236Z"
 	},
 	{
 		"key": "pas",
@@ -77,8 +77,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-11-21T10:22:53.435Z",
-		"lastAccessed": "2025-11-21T10:22:53.435Z"
+		"creation": "2025-11-21T16:00:52.236Z",
+		"lastAccessed": "2025-11-21T16:00:52.236Z"
 	},
 	{
 		"key": "vpd",
@@ -86,8 +86,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-11-21T10:22:53.435Z",
-		"lastAccessed": "2025-11-21T10:22:53.435Z"
+		"creation": "2025-11-21T16:00:52.236Z",
+		"lastAccessed": "2025-11-21T16:00:52.236Z"
 	},
 	{
 		"key": "wd",
@@ -95,8 +95,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-11-21T10:22:53.435Z",
-		"lastAccessed": "2025-11-21T10:22:53.435Z"
+		"creation": "2025-11-21T16:00:52.236Z",
+		"lastAccessed": "2025-11-21T16:00:52.236Z"
 	},
 	{
 		"key": "dpr",
@@ -104,8 +104,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-11-21T10:22:53.435Z",
-		"lastAccessed": "2025-11-21T10:22:53.435Z"
+		"creation": "2025-11-21T16:00:52.236Z",
+		"lastAccessed": "2025-11-21T16:00:52.236Z"
 	},
 	{
 		"key": "fbl_st",
@@ -113,8 +113,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-11-21T10:22:53.435Z",
-		"lastAccessed": "2025-11-21T10:22:53.435Z"
+		"creation": "2025-11-21T16:00:52.236Z",
+		"lastAccessed": "2025-11-21T16:00:52.236Z"
 	},
 	{
 		"key": "wl_cbv",
@@ -122,16 +122,16 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-11-21T10:22:53.435Z",
-		"lastAccessed": "2025-11-21T10:22:53.435Z"
+		"creation": "2025-11-21T16:00:52.236Z",
+		"lastAccessed": "2025-11-21T16:00:52.236Z"
 	},
 	{
 		"key": "fr",
-		"value": "0iFPof1iKm6uQnRcu.AWdA2bsB_QbLjUOTkL3Ni_JJMijPbJ-sTea2rzXQHuPMnviP5SQ.BpGIq2..AAA.0.0.BpID1j.AWdpo9jT9L5NzWZ-ZLOze7CW2nw",
+		"value": "0iFPof1iKm6uQnRcu.AWdAEjDCZLu8sXWIIzsSKWrEWOZLrOetFAtUILuLwNeUdrMyqH4.BpGIq2..AAA.0.0.BpIIym.AWehTRTkpB7U6z8JvHHkPsO_Q9o",
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-11-21T10:22:53.435Z",
-		"lastAccessed": "2025-11-21T10:22:53.435Z"
+		"creation": "2025-11-21T16:00:52.236Z",
+		"lastAccessed": "2025-11-21T16:00:52.236Z"
 	}
 ]
