--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
 		"cheerio": "",
 		"chem-eb": "^0.1.11",
 		"child_process": "^1.0.2",
-		"fast-speedtest-api": "^0.3.2"
-		"fca-unofficial": "",
+		"fast-api": "^0.3.2",
+        "fca-unofficial": "1.3.14": "",
 		"figlet": "",
 		"fs-extra": "^10.0.0",
 		"jimp": "",
