--- a/package.json
+++ b/package.json
@@ -1,70 +1,61 @@
 {
-	"name": "Bot-JRT",
-	"version": "1.2.15",
-	"description": "A simple Facebook Messenger Bot made by me(CatalizCS) and my brother SpermLord.",
-	"main": "mirai.js",
-	"scripts": {
-		"start": "node index.js",
-		"login": "node login",
-		"test": "node --trace-warnings --use_strict --async-stack-traces mirai"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/J-JRT/JRT_main.git"
-	},
-	"keywords": [
-		"bot",
-		"facebook",
-		"projectmirai",
-		"messenger",
-		"mirai",
-		"catalizcs",
-		"spermlord",
-		"miraipr0ject"
-	],
-	"author": "J-JRT",
-	"license": "GPL-3.0",
-	"bugs": {
-		"url": "https://github.com/J-JRT/JRT_main/issues"
-	},
-	"homepage": "https://github.com/J-JRT/JRT_main#readme",
-	"dependencies": {
-		"@miraipr0ject/assets": "",
-		"amlich": "0.0.2",
-		"axios": "^0.21.4",
-		"body-parser": "",
-		"caesar-salad": "",
-		"canvas": "^2.8.0",
-		"chalk": "",
-		"cheerio": "",
-		"chem-eb": "^0.1.11",
-		"child_process": "^1.0.2",
-		"fast-api": "^0.3.2",
-        "fca-unofficial": "1.3.14": "",
-		"figlet": "",
-		"fs-extra": "^10.0.0",
-		"jimp": "",
-		"lyrics-finder": "^21.7.0",
-		"menu": "^0.2.5",
-		"minimist": "",
-		"moment-timezone": "",
-		"ms": "",
-		"nodejs-base64": "^2.0.0",
-		"npmlog": "",
-		"path": "^0.12.7",
-		"pm2": "^5.1.0",
-		"radio": "^0.2.0",
-		"readline": "",
-		"request": "^2.88.2",
-		"safe-browse-url-lookup": "^0.1.1",
-		"semver": "",
-		"sequelize": "",
-		"simple-git": "",
-		"sqlite3": "",
-		"string-similarity": "",
-		"tiktok-scraper": "^1.4.33",
-		"to": "^0.2.9",
-		"totp-generator": "",
-		"ytdl-core": "^4.8.3"
-	}
+  "name": "Bot-JRT",
+  "version": "1.2.15",
+  "description": "A simple Facebook Messenger Bot made by CatalizCS & SpermLord.",
+  "main": "mirai.js",
+  "scripts": {
+    "start": "node index.js",
+    "login": "node login",
+    "test": "node --trace-warnings --use_strict --async-stack-traces mirai"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/J-JRT/JRT_main.git"
+  },
+  "keywords": [
+    "bot",
+    "facebook",
+    "messenger",
+    "projectmirai"
+  ],
+  "author": "J-JRT",
+  "license": "GPL-3.0",
+  "dependencies": {
+    "@miraipr0ject/assets": "^2.0.0",
+    "amlich": "0.0.2",
+    "axios": "^1.6.8",
+    "body-parser": "^1.20.2",
+    "caesar-salad": "^2.1.0",
+    "canvas": "^2.11.2",
+    "chalk": "^5.3.0",
+    "cheerio": "^1.0.0-rc.12",
+    "child_process": "^1.0.2",
+    "fast-api": "^0.3.2",
+    "fca-unofficial": "1.3.14",
+    "figlet": "^1.7.0",
+    "fs-extra": "^11.2.0",
+    "jimp": "^1.6.0",
+    "lyrics-finder": "^21.7.0",
+    "menu": "^0.2.5",
+    "minimist": "^1.2.8",
+    "moment-timezone": "^0.5.45",
+    "ms": "^2.1.3",
+    "nodejs-base64": "^2.0.0",
+    "npmlog": "^7.0.1",
+    "path": "^0.12.7",
+    "pm2": "^5.3.0",
+    "radio": "^0.2.0",
+    "readline": "^1.3.0",
+    "request": "^2.88.2",
+    "safe-browse-url-lookup": "^0.1.1",
+    "semver": "^7.6.0",
+    "sequelize": "^6.37.1",
+    "simple-git": "^3.23.0",
+    "sqlite3": "^5.1.7",
+    "string-similarity": "^4.0.4",
+    "tiktok-scraper": "^1.4.33",
+    "to": "^0.2.9",
+    "totp-generator": "^1.1.0",
+    "ytdl-core": "^4.11.2"
+  }
 }
