--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "cheerio": "^1.0.0-rc.12",
   "child_process": "^1.0.2",
   "fast-api": "^0.3.2",
-  "fca-unofficial": "1.3.14",
+  "fca-horizon-remake": "",
   "figlet": "^1.7.0",
   "fs-extra": "^11.2.0",
   "jimp": "^1.6.0",
