--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple Facebook Messenger Bot made by CatalizCS & SpermLord.",
   "main": "mirai.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node mirai.js",
     "login": "node login",
     "test": "node --trace-warnings --use_strict --async-stack-traces mirai"
   },
